--- a/src/main/resources/templates/components/principal.html
+++ b/src/main/resources/templates/components/principal.html
@@ -1,15 +1,60 @@
-<header id="header"></header>
-
+<div class="principal_img">
     <!-- Img Header -->
-    <figure class="img-header">
-        <div class="welcome">
-           
-           <h4>"Por un buen día de sabores sin barreras"</h4>
-           <h2><a href="#">
-               <center><i class="fas fa-utensils"></i>
-               Good Day</center>
-           </a></h2>
+    <figure class="img_figure">
+        <div class="img_content">
+            <!--h4 class="titulo_img">Por un buen día de sabores sin barreras</h4-->
+            <p class="dancing-script">
+                <i class="fas fa-utensils"></i> Sp
+            </p>
         </div>
     </figure>
+</div>
 
-</header>
+<style>
+    /* ===== DISEÑO PRINCIPAL ===== */
+    .principal_img {
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        /* Toda la pantalla */
+        overflow: hidden;
+    }
+
+    .img_figure {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+    }
+
+    .img_figure::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url(./img/titulo.jpg) no-repeat center center/cover;
+        z-index: -1;
+            filter: brightness(50%); /* Añade un filtro oscuro a la imagen para hacerla más oscura */
+    }
+
+    .img_content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        color: #fff;
+        border-radius: 10px;
+    }
+
+    .img_content p {
+        font-size: 6rem;
+        margin: 0;
+    }
+
+    .titulo_img {
+        font-size: 3rem;
+        margin: 0;
+    }
+</style>
